--- a/StackdVersion1/Base.lproj/Main.storyboard
+++ b/StackdVersion1/Base.lproj/Main.storyboard
@@ -122,7 +122,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KDc-fq-FJ0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1783" y="99"/>
+            <point key="canvasLocation" x="1036" y="152"/>
         </scene>
         <!--Filtered Items View Controller-->
         <scene sceneID="md5-g0-fuB">
@@ -248,7 +248,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lR6-5N-23J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2580" y="99"/>
+            <point key="canvasLocation" x="1710" y="152"/>
         </scene>
         <!--Home List View Controller-->
         <scene sceneID="VWW-r4-FZz">
@@ -302,7 +302,60 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cml-1B-CQz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1012" y="99.400299850074973"/>
+            <point key="canvasLocation" x="358" y="152"/>
+        </scene>
+        <!--Archive View Controller-->
+        <scene sceneID="GXn-XL-Onh">
+            <objects>
+                <viewController storyboardIdentifier="archiveVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="UNS-8K-LOo" customClass="ArchiveViewController" customModule="StackdVersion1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pk1-Ht-bQn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XCM-n2-u7s">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="regularcell" rowHeight="120" id="yEB-as-zbr" customClass="SharedTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yEB-as-zbr" id="YCo-iw-sxx">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="youtubecell" rowHeight="120" id="mP6-rz-S48" customClass="YoutubeTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="148" width="375" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mP6-rz-S48" id="HIK-TD-Xx1">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="tNM-gu-c5B" id="yGf-e4-CUh"/>
+                                    <outlet property="delegate" destination="tNM-gu-c5B" id="JRC-pJ-81E"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="XCM-n2-u7s" firstAttribute="top" secondItem="pk1-Ht-bQn" secondAttribute="top" id="2SV-5m-Xw9"/>
+                            <constraint firstItem="XCM-n2-u7s" firstAttribute="leading" secondItem="jio-8G-QDa" secondAttribute="leading" id="Abc-eV-Y99"/>
+                            <constraint firstItem="jio-8G-QDa" firstAttribute="bottom" secondItem="XCM-n2-u7s" secondAttribute="bottom" id="RPN-cI-JwJ"/>
+                            <constraint firstAttribute="trailing" secondItem="XCM-n2-u7s" secondAttribute="trailing" id="RyE-eb-Iat"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="jio-8G-QDa"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="hHW-Ih-BDv"/>
+                    <connections>
+                        <outlet property="tableView" destination="XCM-n2-u7s" id="3Te-zK-74g"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lg9-bn-qDj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="358" y="909"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="UvE-IM-YYv">
@@ -316,11 +369,12 @@
                     </tabBar>
                     <connections>
                         <segue destination="Ibm-LX-SoS" kind="relationship" relationship="viewControllers" id="MCa-gl-fJI"/>
+                        <segue destination="cjh-XV-ixL" kind="relationship" relationship="viewControllers" id="CoR-YL-HfR"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ycc-sq-aJ9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-649" y="99"/>
+            <point key="canvasLocation" x="-1684" y="484"/>
         </scene>
         <!--Item-->
         <scene sceneID="42V-aI-Gbh">
@@ -339,7 +393,26 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZRs-Zh-Rty" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="148" y="99"/>
+            <point key="canvasLocation" x="-394" y="153"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="6m3-Fs-HQA">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cjh-XV-ixL" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="uJZ-H0-2Zq"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="evi-GY-gDJ">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="UNS-8K-LOo" kind="relationship" relationship="rootViewController" id="Lzj-MO-Dx6"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xA2-uD-Aeb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-394" y="909"/>
         </scene>
     </scenes>
     <resources>
