--- a/StackdVersion1/UI/Cell/YoutubeTableViewCell.xib
+++ b/StackdVersion1/UI/Cell/YoutubeTableViewCell.xib
@@ -18,7 +18,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="fBh-xG-5Kq">
-                    <rect key="frame" x="5" y="5" width="375" height="112"/>
+                    <rect key="frame" x="6" y="5" width="375" height="112"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="8qr-r1-hWa" userLabel="Left Stack View">
                             <rect key="frame" x="0.0" y="0.0" width="261.5" height="112"/>
@@ -27,34 +27,34 @@
                                     <rect key="frame" x="0.0" y="0.0" width="261.5" height="37.5"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="5aF-7V-roj">
-                                            <rect key="frame" x="0.0" y="0.0" width="170.5" height="37.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="144" height="37.5"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Fm-pR-30g">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Fm-pR-30g">
                                                     <rect key="frame" x="0.0" y="0.0" width="37.5" height="37.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="8Fm-pR-30g" secondAttribute="height" multiplier="1:1" id="iPr-7U-6kG"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Shared from Source" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UXe-Xa-ffC">
-                                                    <rect key="frame" x="42.5" y="0.0" width="183" height="37.5"/>
+                                                    <rect key="frame" x="42.5" y="0.0" width="156.5" height="37.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </stackView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Duration" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="srU-NG-OSY">
-                                            <rect key="frame" x="165.5" y="0.0" width="91" height="37.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Duration" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="srU-NG-OSY">
+                                            <rect key="frame" x="138" y="0.0" width="117.5" height="37.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="srU-NG-OSY" firstAttribute="width" secondItem="UXe-Xa-ffC" secondAttribute="width" multiplier="1:2" id="fTo-cL-YYb"/>
+                                        <constraint firstItem="srU-NG-OSY" firstAttribute="width" secondItem="UXe-Xa-ffC" secondAttribute="width" multiplier="1.5:2" id="fTo-cL-YYb"/>
                                     </constraints>
                                 </stackView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="adkhafsljiafdkljafdlkasdfjhdilasfhadislfhadlfhalsdhfasldhfalidsfhaldshfalkds" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ENU-oc-Xze">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="adkhafsljiafdkljafdlkasdfjhdilasfhadislfhadlfhalsdhfasldhfalidsfhaldshfalkds" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ENU-oc-Xze">
                                     <rect key="frame" x="0.0" y="52.5" width="261.5" height="59.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
@@ -65,19 +65,26 @@
                                 <constraint firstItem="gJV-Ci-yCo" firstAttribute="height" secondItem="8qr-r1-hWa" secondAttribute="height" multiplier="1:3" id="vir-cG-Tl7"/>
                             </constraints>
                         </stackView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wr1-rf-xvo">
-                            <rect key="frame" x="256.5" y="0.0" width="113.5" height="112"/>
-                        </imageView>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="hzg-8f-QkY">
+                            <rect key="frame" x="255.5" y="0.0" width="113.5" height="112"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wr1-rf-xvo">
+                                    <rect key="frame" x="0.0" y="0.0" width="113.5" height="112"/>
+                                </imageView>
+                            </subviews>
+                        </stackView>
                     </subviews>
+                    <constraints>
+                        <constraint firstItem="hzg-8f-QkY" firstAttribute="width" secondItem="8qr-r1-hWa" secondAttribute="width" multiplier="1.3:3" id="6fc-mB-K2E"/>
+                    </constraints>
                 </stackView>
             </subviews>
             <color key="backgroundColor" red="0.53725490200000003" green="0.8862745098" blue="0.6705882353" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="fBh-xG-5Kq" secondAttribute="bottom" constant="3" id="Msk-st-A2D"/>
-                <constraint firstItem="fBh-xG-5Kq" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" constant="10" id="cY8-FK-Td6"/>
+                <constraint firstItem="fBh-xG-5Kq" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" constant="6" id="cY8-FK-Td6"/>
                 <constraint firstItem="fBh-xG-5Kq" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="hQ3-CS-vQx"/>
-                <constraint firstItem="wr1-rf-xvo" firstAttribute="width" secondItem="8qr-r1-hWa" secondAttribute="width" multiplier="1.3:3" id="vas-dx-q87"/>
-                <constraint firstItem="fBh-xG-5Kq" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="5" id="y4L-OO-F53"/>
+                <constraint firstItem="fBh-xG-5Kq" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="6" id="y4L-OO-F53"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
